--- a/utils/demoted.cfg
+++ b/utils/demoted.cfg
@@ -1,17 +1,128 @@
 # demoted packages from xenial to yakkety
+appmenu-qt5
+ceph-fuse
 cloop-utils
-libboost-date-time1.58.0
-libboost-filesystem1.58.0
-libboost-iostreams1.58.0
-libboost-program-options1.58-dev
-libboost-program-options1.58.0
-libboost-random1.58.0
-libboost-regex1.58.0
-libboost-system1.58.0
-libboost-thread1.58.0
-libboost1.58-dbg
-libboost1.58-dev
-libboost1.58-doc
-libboost1.58-tools-dev
-libpng12-0
-libpng12-dev
+corosync-notifyd
+cpp-5-aarch64-linux-gnu
+cpp-5-arm-linux-gnueabihf
+cpp-5-powerpc-linux-gnu
+cpp-5-powerpc64le-linux-gnu
+dh-php
+espeak
+g++-5-aarch64-linux-gnu
+g++-5-arm-linux-gnueabihf
+g++-5-multilib
+g++-5-powerpc-linux-gnu
+g++-5-powerpc64le-linux-gnu
+gcc-5-aarch64-linux-gnu
+gcc-5-aarch64-linux-gnu-base
+gcc-5-arm-linux-gnueabihf
+gcc-5-arm-linux-gnueabihf-base
+gcc-5-cross-base
+gcc-5-multilib
+gcc-5-powerpc-linux-gnu
+gcc-5-powerpc-linux-gnu-base
+gcc-5-powerpc64le-linux-gnu
+gcc-5-powerpc64le-linux-gnu-base
+gfortran-5
+gfortran-5-multilib
+gir1.2-isocodes-1.2
+gnome-user-guide
+golang-dbus-dev
+golang-github-coreos-go-systemd-dev
+golang-github-mvo5-goconfigparser-dev
+golang-github-mvo5-uboot-go-dev
+golang-github-peterh-liner-dev
+golang-go-flags-dev
+golang-juju-loggo-dev
+golang-pb-dev
+golang-pty-dev
+hardening-includes
+lib32readline6
+lib64readline6
+libasan2-arm64-cross
+libasan2-armhf-cross
+libasan2-powerpc-cross
+libasan2-ppc64el-cross
+libcanberra-gstreamer
+libcephfs-jni
+libclang1-3.6
+libcuda1-304-updates
+libcuda1-361
+libdata-alias-perl
+libgcc-5-dev-arm64-cross
+libgcc-5-dev-armhf-cross
+libgcc-5-dev-powerpc-cross
+libgcc-5-dev-ppc64el-cross
+libgnomevfs2-extra
+libgo7
+libisocodes-dev
+libisocodes1
+libjakarta-taglibs-standard-java
+libjasper-dev
+libjasper1
+libjaxp1.3-java
+libjaxp1.3-java-gcj
+libjstl1.1-java
+liblinear-tools
+libpangox-1.0-0
+libpangox-1.0-dev
+libreadline6
+libreadline6-dbg
+libstdc++-5-dev-arm64-cross
+libstdc++-5-dev-armhf-cross
+libstdc++-5-dev-powerpc-cross
+libstdc++-5-dev-ppc64el-cross
+libx32readline6
+libxalan2-java
+libxalan2-java-doc
+libxerces2-java
+libxerces2-java-doc
+libxerces2-java-gcj
+libxml-commons-external-java
+libxml-commons-external-java-doc
+libxml-commons-resolver1.1-java
+libxml-commons-resolver1.1-java-doc
+libxml-commons-resolver1.1-java-gcj
+lua-lpeg
+lua-lpeg-dev
+lzma
+lzma-dev
+makedev
+mountall
+neutron-lbaas-common
+ntpdate
+nvidia-opencl-icd-304-updates
+nvidia-opencl-icd-361
+python-billiard-doc
+python-ecdsa
+python-kajiki-doc
+python-lldb-3.8
+python-neutron-lbaas
+python-nose-doc
+python3-alembic
+python3-billiard
+python3-changelog
+python3-dogpile.core
+python3-ecdsa
+python3-kajiki
+python3-memcache
+python3-nose
+python3-redis
+python3-rednose
+python3-sphinx-paramlinks
+python3-sphinx-rtd-theme
+python3-sure
+python3-termstyle
+python3-tornado
+qemu-system-mips
+qemu-system-misc
+qemu-system-sparc
+rbd-fuse
+rbd-mirror
+rbd-nbd
+transmission-cli
+transmission-daemon
+transmission-qt
+ubuntu-wallpapers-xenial
+xchat-gnome-indicator
