* DistUpgrade/{EOL,Devel}ReleaseAnnouncement,   DistUpgrade/window_main.ui,   data/gtkbuilder/DistUpgrade.ui,   data/DistUpgrade.cfg,   pre-build.sh:   - updated for 17.04 -> 17.10

--- a/data/DistUpgrade.cfg
+++ b/data/DistUpgrade.cfg
@@ -114,8 +114,8 @@ BackupExt=distUpgrade
 LogDir=/var/log/dist-upgrade/
 
 [Sources]
-From=yakkety
-To=zesty
+From=zesty
+To=artful
 ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
 Components=main,restricted,universe,multiverse
