releasing package ubuntu-release-upgrader version 1:17.10.1

--- a/utils/demoted.cfg
+++ b/utils/demoted.cfg
@@ -1,48 +1,223 @@
-# demoted packages from yakkety to zesty
-antlr
-antlr-doc
-ecj1
-emacs24
-emacs24-bin-common
-emacs24-common
-emacs24-common-non-dfsg
-emacs24-dbg
-emacs24-el
-emacs24-lucid-dbg
-emacs24-nox
-emacs24-nox-dbg
-euca2ools
-fastjar
-g++-5
-gcj-5
-gcj-5-jdk
-gcj-5-jre
-gcj-5-jre-headless
-golang-1.6
-libantlr-dev
-libantlr-java
-libboost-atomic1.61-dev
-libboost-atomic1.61.0
-libboost-chrono1.61-dev
-libboost-chrono1.61.0
-libboost-date-time1.61-dev
-libboost-date-time1.61.0
-libboost-locale1.61.0
-libboost-log1.61.0
-libboost-program-options1.61-dev
-libboost-random1.61.0
-libboost-regex1.61.0
-libboost-serialization1.61-dev
-libboost-serialization1.61.0
-libboost-system1.61-dev
-libboost-thread1.61-dev
-libboost-thread1.61.0
-libgnome2-bin
-liblua5.1-0
-liblua5.1-0-dbg
-liblua5.1-0-dev
-lua5.1-doc
-python-requestbuilder
-xserver-xorg-input-evdev
-xserver-xorg-input-evdev-dbg
-xserver-xorg-input-evdev-dev
+# demoted packages from zesty to artful
+accountsservice-ubuntu-schemas
+accountsservice-ubuntu-touch-schemas
+address-book-service
+biometryd-bin
+connectivity-doc
+content-hub
+dbus-cpp-dev-examples
+evolution-data-server-utouch
+evolution-data-server-utouch-dev
+folks-common
+gir1.2-farstream-0.2
+gir1.2-folks-0.6
+gir1.2-gssdp-1.0
+gir1.2-gupnp-1.0
+gir1.2-gupnpigd-1.0
+gir1.2-nice-0.1
+gstreamer1.0-nice
+history-service
+indicator-network
+indicator-transfer
+indicator-transfer-download-manager
+libbiometryd-dev
+libbiometryd1
+libboost-program-options1.61.0
+libboost-system1.61.0
+libboost1.61-dbg
+libboost1.61-dev
+libboost1.61-doc
+libboost1.61-tools-dev
+libcgmanager-dev
+libcgmanager0
+libconnectivity-qt1
+libconnectivity-qt1-dev
+libdbus-cpp-dev
+libdbus-cpp5
+libfarstream-0.2-5
+libfarstream-0.2-dev
+libfarstream-0.2-doc
+libfolks-dev
+libfolks-dummy-dev
+libfolks-dummy25
+libfolks-eds-dev
+libfolks-eds25
+libfolks-telepathy-dev
+libfolks-telepathy25
+libfolks25
+libgssdp-1.0-3
+libgssdp-1.0-dev
+libgssdp-doc
+libgupnp-1.0-4
+libgupnp-1.0-dev
+libgupnp-doc
+libgupnp-igd-1.0-4
+libgupnp-igd-1.0-dbg
+libgupnp-igd-1.0-dev
+libgupnp-igd-1.0-doc
+libhistoryservice-dev
+libhistoryservice0
+libindicator-transfer-dev
+libindicator-transfer0
+libmediascanner-2.0-4
+libmediascanner-2.0-dev
+libmiral-dev
+libmiral2
+libmirclientcpp-dev
+libmission-control-plugins-dev
+libmission-control-plugins-doc
+libmission-control-plugins0
+libnet-cpp-dev
+libnet-cpp-doc
+libnet-cpp2
+libnice-dbg
+libnice-dev
+libnice-doc
+libnice10
+libonline-accounts-client-dev
+libonline-accounts-client1
+libonline-accounts-daemon-dev
+libonline-accounts-daemon1
+libonline-accounts-plugin-dev
+libonline-accounts-qt-dev
+libonline-accounts-qt1
+libplatform-api1-dev
+libplatform-api1-doc
+libplatform-hardware-api1-dev
+libprocess-cpp-dev
+libprocess-cpp-doc
+libprocess-cpp3
+libqdjango-db0
+libqdjango-dbg
+libqdjango-dev
+libqdjango-doc
+libqdjango-http0
+libqmenumodel-dev
+libqmenumodel0
+libqofono-dev
+libqofono-qt5-0
+libqt5sensors5
+libqt5sensors5-dev
+libscope-harness-dev
+libscope-harness3
+libsodium-dbg
+libsodium-dev
+libsodium18
+libsystemsettings-dev
+libsystemsettings1
+libtelepathy-farstream-dev
+libtelepathy-farstream-doc
+libtelepathy-farstream3
+libtelepathy-farstream3-dbg
+libtelepathy-qt4-2
+libtelepathy-qt4-dbg
+libtelepathy-qt4-dev
+libtelepathy-qt4-doc
+libtelepathy-qt4-farstream2
+libtelepathy-qt5-0
+libtelepathy-qt5-dbg
+libtelepathy-qt5-dev
+libtelepathy-qt5-farstream0
+libthumbnailer-qt-dev
+libthumbnailer-qt-doc
+libthumbnailer-qt1.0
+libtrust-store-dev
+libtrust-store-doc
+libtrust-store2
+libubuntu-application-api-dev
+libubuntu-application-api-doc
+libubuntu-application-api-headers
+libubuntu-application-api3
+libubuntu-location-service-dbg
+libubuntu-location-service-dev
+libubuntu-location-service3
+libubuntu-platform-hardware-api-dev
+libubuntu-platform-hardware-api-headers
+libubuntu-platform-hardware-api3
+libunity-api-dev
+libunity-api-doc
+libunity-api0
+libunity-scopes-dev
+libunity-scopes-doc
+libunity-scopes-qt-dev
+libunity-scopes-qt-doc
+libunity-scopes-qt0.2
+libunity-scopes1.0
+libupstart-dev
+libupstart1
+libusermetrics-doc
+libusermetricsinput1
+libusermetricsinput1-dev
+libusermetricsoutput1
+libusermetricsoutput1-dev
+libzmq3-dev
+libzmq5
+libzmq5-dbg
+libzmqpp-dev
+libzmqpp4
+mediascanner2.0
+mir-client-platform-mesa5
+mir-graphics-drivers-desktop
+mir-platform-graphics-mesa-kms12
+mir-platform-graphics-mesa-x12
+mir-platform-input-evdev6
+miral-doc
+miral-examples
+policykit-unity8
+qmenumodel-qml
+qml-module-biometryd
+qml-module-ofono
+qml-module-pamauthentication0.1
+qml-module-qmltermwidget1.0
+qml-module-qtqml-statemachine
+qml-module-ubuntu-connectivity
+qml-module-ubuntu-onlineaccounts-client
+qml-module-ubuntu-onlineaccounts-client-doc
+qml-module-ubuntu-onlineaccounts2
+qml-module-ubuntu-onlineaccounts2-doc
+qml-module-ubuntu-settings-components
+qml-module-ubuntu-thumbnailer0.1
+qtcontact5-galera
+qtdeclarative5-gsettings1.0
+qtdeclarative5-qtmir-plugin
+qtdeclarative5-ubuntu-settings-components
+qtdeclarative5-ubuntu-telephony0.1
+qtdeclarative5-unity-notifications-plugin
+qtmir-desktop
+qtsensors5-doc
+qtsensors5-examples
+qtubuntu-appmenutheme
+qtubuntu-desktop
+qtubuntu-print
+repowerd
+repowerd-data
+telepathy-mission-control-5
+telepathy-mission-control-5-dbg
+telephony-service
+thumbnailer-service
+tone-generator
+tone-generator-dbg
+ubuntu-application-api3-desktop
+ubuntu-application-api3-examples
+ubuntu-application-api3-test
+ubuntu-application-api3-touch
+ubuntu-keyboard-data
+ubuntu-keyboard-dev
+ubuntu-location-service-doc
+ubuntu-location-service-examples
+ubuntu-printing-app
+ubuntu-system-settings
+ubuntu-terminal-app
+unity-greeter-session-broadcast
+unity-plugin-scopes
+unity-scope-mediascanner2
+unity-system-compositor
+unity8
+unity8-common
+unity8-desktop-session
+unity8-doc
+unity8-private
+upstart-monitor
+url-dispatcher
+url-dispatcher-tools
+usermetricsservice
