Create demoted.cfg.xenial and DistUpgrade.cfg.xenial so that upgrades from Ubuntu 16.04 to Ubuntu 17.10 are supported. (LP: #1692092)

--- a/utils/demoted.cfg
+++ b/utils/demoted.cfg
@@ -1,35 +1,45 @@
 # demoted packages from zesty to artful
+accounts-qml-module-doc
 accountsservice-ubuntu-schemas
 accountsservice-ubuntu-touch-schemas
 address-book-service
+android-headers
+android-headers-19
+apparmor-easyprof
+apparmor-easyprof-ubuntu
 biometryd-bin
+click
+click-apparmor
+click-dev
+click-doc
 connectivity-doc
-content-hub
 dbus-cpp-dev-examples
 evolution-data-server-utouch
 evolution-data-server-utouch-dev
 folks-common
+geoclue-2.0
+gir1.2-click-0.4
 gir1.2-farstream-0.2
 gir1.2-folks-0.6
+gir1.2-geoclue-2.0
 gir1.2-gssdp-1.0
 gir1.2-gupnp-1.0
 gir1.2-gupnpigd-1.0
 gir1.2-nice-0.1
+gir1.2-unity-webapps-0.2
+golang-1.7
 gstreamer1.0-nice
 history-service
+iio-sensor-proxy
 indicator-network
 indicator-transfer
 indicator-transfer-download-manager
+libandroid-properties-dev
+libandroid-properties1
 libbiometryd-dev
 libbiometryd1
-libboost-program-options1.61.0
-libboost-system1.61.0
-libboost1.61-dbg
-libboost1.61-dev
-libboost1.61-doc
-libboost1.61-tools-dev
-libcgmanager-dev
-libcgmanager0
+libclick-0.4-0
+libclick-0.4-dev
 libconnectivity-qt1
 libconnectivity-qt1-dev
 libdbus-cpp-dev
@@ -45,6 +55,8 @@ libfolks-eds25
 libfolks-telepathy-dev
 libfolks-telepathy25
 libfolks25
+libgeoclue-2-0
+libgeoclue-2-dev
 libgssdp-1.0-3
 libgssdp-1.0-dev
 libgssdp-doc
@@ -55,15 +67,20 @@ libgupnp-igd-1.0-4
 libgupnp-igd-1.0-dbg
 libgupnp-igd-1.0-dev
 libgupnp-igd-1.0-doc
+libhardware-dev
+libhardware2
 libhistoryservice-dev
 libhistoryservice0
+libhybris
+libhybris-common-dev
+libhybris-common1
+libhybris-dev
 libindicator-transfer-dev
 libindicator-transfer0
+libmedia-dev
+libmedia1
 libmediascanner-2.0-4
 libmediascanner-2.0-dev
-libmiral-dev
-libmiral2
-libmirclientcpp-dev
 libmission-control-plugins-dev
 libmission-control-plugins-doc
 libmission-control-plugins0
@@ -81,6 +98,11 @@ libonline-accounts-daemon1
 libonline-accounts-plugin-dev
 libonline-accounts-qt-dev
 libonline-accounts-qt1
+liboxideqt-qmlplugin
+liboxideqtcore-dev
+liboxideqtcore0
+liboxideqtquick-dev
+liboxideqtquick0
 libplatform-api1-dev
 libplatform-api1-doc
 libplatform-hardware-api1-dev
@@ -96,6 +118,10 @@ libqmenumodel-dev
 libqmenumodel0
 libqofono-dev
 libqofono-qt5-0
+libqt5location5
+libqt5location5-plugins
+libqt5positioning5
+libqt5positioning5-plugins
 libqt5sensors5
 libqt5sensors5-dev
 libscope-harness-dev
@@ -134,6 +160,7 @@ libubuntu-location-service3
 libubuntu-platform-hardware-api-dev
 libubuntu-platform-hardware-api-headers
 libubuntu-platform-hardware-api3
+libudm-priv-common1
 libunity-api-dev
 libunity-api-doc
 libunity-api0
@@ -143,8 +170,9 @@ libunity-scopes-qt-dev
 libunity-scopes-qt-doc
 libunity-scopes-qt0.2
 libunity-scopes1.0
-libupstart-dev
-libupstart1
+libunity-webapps-dev
+libunity-webapps-doc
+libunity-webapps0
 libusermetrics-doc
 libusermetricsinput1
 libusermetricsinput1-dev
@@ -161,29 +189,54 @@ mir-graphics-drivers-desktop
 mir-platform-graphics-mesa-kms12
 mir-platform-graphics-mesa-x12
 mir-platform-input-evdev6
-miral-doc
-miral-examples
+oxideqt-codecs
+oxideqt-doc
 policykit-unity8
+python-ndg-httpsclient
+python3-apparmor-click
+python3-click-package
 qmenumodel-qml
 qml-module-biometryd
 qml-module-ofono
 qml-module-pamauthentication0.1
 qml-module-qmltermwidget1.0
+qml-module-qt-labs-settings
+qml-module-qtlocation
+qml-module-qtpositioning
 qml-module-qtqml-statemachine
+qml-module-qtsysteminfo
 qml-module-ubuntu-connectivity
+qml-module-ubuntu-layouts
+qml-module-ubuntu-onlineaccounts
 qml-module-ubuntu-onlineaccounts-client
 qml-module-ubuntu-onlineaccounts-client-doc
 qml-module-ubuntu-onlineaccounts2
 qml-module-ubuntu-onlineaccounts2-doc
 qml-module-ubuntu-settings-components
+qml-module-ubuntu-test
 qml-module-ubuntu-thumbnailer0.1
+qml-module-ubuntu-web
+qml-module-ubuntu-web-doc
 qtcontact5-galera
+qtdeclarative5-accounts-plugin
 qtdeclarative5-gsettings1.0
 qtdeclarative5-qtmir-plugin
+qtdeclarative5-qtquick2-plugin
+qtdeclarative5-ubuntu-content1
+qtdeclarative5-ubuntu-download-manager0.1
 qtdeclarative5-ubuntu-settings-components
 qtdeclarative5-ubuntu-telephony0.1
+qtdeclarative5-ubuntu-ui-extras0.2
+qtdeclarative5-ubuntu-web-plugin-doc
 qtdeclarative5-unity-notifications-plugin
+qtdeclarative5-window-plugin
+qtlocation5-dev
+qtlocation5-doc
+qtlocation5-examples
 qtmir-desktop
+qtpositioning5-dev
+qtpositioning5-doc
+qtpositioning5-examples
 qtsensors5-doc
 qtsensors5-examples
 qtubuntu-appmenutheme
@@ -201,6 +254,7 @@ ubuntu-application-api3-desktop
 ubuntu-application-api3-examples
 ubuntu-application-api3-test
 ubuntu-application-api3-touch
+ubuntu-download-manager
 ubuntu-keyboard-data
 ubuntu-keyboard-dev
 ubuntu-location-service-doc
@@ -212,12 +266,18 @@ unity-greeter-session-broadcast
 unity-plugin-scopes
 unity-scope-mediascanner2
 unity-system-compositor
+unity-webapps-qml
+unity-webapps-qml-doc
+unity-webapps-qml-examples
+unity-webapps-service
 unity8
 unity8-common
-unity8-desktop-session
 unity8-doc
 unity8-private
-upstart-monitor
 url-dispatcher
 url-dispatcher-tools
 usermetricsservice
+webapp-container
+webbrowser-app
+xserver-xorg-input-synaptics
+xserver-xorg-input-synaptics-dev
