--- a/debian/control
+++ b/debian/control
@@ -14,7 +14,6 @@ Build-Depends-Indep: libxml-parser-perl,
                      intltool
 Standards-Version: 3.9.6
 Vcs-Bzr: http://bazaar.launchpad.net/~ubuntu-core-dev/ubuntu-release-upgrader/trunk
-XS-Testsuite: autopkgtest
 X-Python3-Version: >= 3.2
 
 Package: ubuntu-release-upgrader-core
@@ -57,9 +56,9 @@ Depends: ${python3:Depends},
          python3-distupgrade (= ${source:Version}),
          python3-dbus,
          python3-gi (>= 3.8),
-         gir1.2-vte-2.91 | gir1.2-vte-2.90,
+         gir1.2-vte-2.91,
          gir1.2-gtk-3.0,
-         gir1.2-webkit2-4.0 | gir1.2-webkit-3.0
+         gir1.2-webkit2-4.0
 Description: manage release upgrades
  This is the GTK+ frontend of the Ubuntu Release Upgrader
 
