--- a/utils/demoted.cfg
+++ b/utils/demoted.cfg
@@ -1,52 +1,202 @@
 # demoted packages from zesty to artful
+a11y-profile-manager
+a11y-profile-manager-doc
+a11y-profile-manager-indicator
 accounts-qml-module-doc
 accountsservice-ubuntu-schemas
 accountsservice-ubuntu-touch-schemas
-address-book-service
 android-headers
 android-headers-19
 apparmor-easyprof
 apparmor-easyprof-ubuntu
+appmenu-qt
+bamf-dbg
+bamfdaemon
 biometryd-bin
+clang-3.9
+clang-4.0
 click
 click-apparmor
 click-dev
 click-doc
+compiz
+compiz-core
+compiz-dev
+compiz-gnome
+compiz-plugins-default
+compiz-plugins-main-dev
 connectivity-doc
+cpp-6-aarch64-linux-gnu
+cpp-6-arm-linux-gnueabihf
+cpp-6-powerpc-linux-gnu
+cpp-6-powerpc64le-linux-gnu
 dbus-cpp-dev-examples
-evolution-data-server-utouch
-evolution-data-server-utouch-dev
+eximon4
+fcitx
+fcitx-bin
+fcitx-config-common
+fcitx-config-gtk
+fcitx-dbg
+fcitx-frontend-all
+fcitx-frontend-gtk2
+fcitx-frontend-gtk3
+fcitx-frontend-qt4
+fcitx-frontend-qt5
+fcitx-hangul
+fcitx-libs-dev
+fcitx-module-cloudpinyin
+fcitx-module-dbus
+fcitx-module-kimpanel
+fcitx-module-lua
+fcitx-module-x11
+fcitx-modules
+fcitx-mozc
+fcitx-pinyin
+fcitx-table
+fcitx-ui-classic
+fcitx-ui-qimpanel
+fcitx-unikey
 folks-common
-geoclue-2.0
+fonts-wqy-zenhei
+freerdp-x11
+g++-6
+g++-6-aarch64-linux-gnu
+g++-6-arm-linux-gnueabihf
+g++-6-multilib
+g++-6-powerpc-linux-gnu
+g++-6-powerpc64le-linux-gnu
+gcc-6-aarch64-linux-gnu
+gcc-6-aarch64-linux-gnu-base
+gcc-6-arm-linux-gnueabihf
+gcc-6-arm-linux-gnueabihf-base
+gcc-6-cross-base
+gcc-6-cross-base-ports
+gcc-6-multilib
+gcc-6-powerpc-linux-gnu
+gcc-6-powerpc-linux-gnu-base
+gcc-6-powerpc64le-linux-gnu
+gcc-6-powerpc64le-linux-gnu-base
+geoclue-examples
+geoclue-ubuntu-geoip
+gfortran-6
+gfortran-6-multilib
+giflib-tools
+gir1.2-a11yprofilemanager-0.1
+gir1.2-accounts-1.0
+gir1.2-bamf-3
 gir1.2-click-0.4
 gir1.2-farstream-0.2
+gir1.2-fcitx-1.0
 gir1.2-folks-0.6
-gir1.2-geoclue-2.0
+gir1.2-gmime-2.6
 gir1.2-gssdp-1.0
+gir1.2-gtkspell3-3.0
 gir1.2-gupnp-1.0
 gir1.2-gupnpigd-1.0
+gir1.2-hud-2
+gir1.2-hud-client-2
+gir1.2-lightdm-1
 gir1.2-nice-0.1
-gir1.2-unity-webapps-0.2
+gir1.2-signon-1.0
+gir1.2-ubuntu-app-launch-3
+gnome-system-log
 golang-1.7
+golang-1.7-doc
+golang-1.7-go
+golang-1.7-go-shared-dev
+golang-1.7-race-detector-runtime
+golang-1.7-src
+golang-dbus-dev
+golang-github-bmizerany-assert-dev
+golang-github-bmizerany-pat-dev
+golang-github-coreos-go-systemd-dev
+golang-github-coreos-pkg-dev
+golang-github-kr-pretty-dev
+golang-github-kr-text-dev
+gprompter
+gprompter-dbg
 gstreamer1.0-nice
 history-service
-iio-sensor-proxy
+hud
+hud-doc
+indicator-application
+indicator-appmenu
+indicator-bluetooth
+indicator-common
+indicator-datetime
+indicator-keyboard
+indicator-messages
 indicator-network
-indicator-transfer
-indicator-transfer-download-manager
+indicator-power
+indicator-printers
+indicator-session
+indicator-sound
+jayatana
+liba11y-profile-manager-0.1-0
+liba11y-profile-manager-0.1-dev
+liba11y-profile-manager-data
+libaccounts-glib-dev
+libaccounts-glib-doc
+libaccounts-glib0
+libaccounts-qt-doc
+libaccounts-qt5-1
+libaccounts-qt5-dev
 libandroid-properties-dev
 libandroid-properties1
+libasan3-arm64-cross
+libasan3-armhf-cross
+libasan3-powerpc-cross
+libasan3-ppc64el-cross
+libavahi-qt4-1
+libavahi-qt4-dev
+libbamf-doc
+libbamf3-2
+libbamf3-dev
 libbiometryd-dev
 libbiometryd1
+libboost-log1.62.0
+libclang-common-3.9-dev
+libclang-common-4.0-dev
+libclang1-3.9
+libclang1-4.0
 libclick-0.4-0
 libclick-0.4-dev
+libcolumbus1-common
+libcolumbus1-dev
+libcolumbus1v5
+libcommon-sense-perl
+libcompizconfig0
+libcompizconfig0-dev
 libconnectivity-qt1
 libconnectivity-qt1-dev
 libdbus-cpp-dev
 libdbus-cpp5
+libdbusmenu-qt-dev
+libdbusmenu-qt-doc
+libdbusmenu-qt2
+libdbusmenu-qt5
+libdbusmenu-qt5-dev
+libdbusmenu-qt5-doc
+libdecoration0
+libdecoration0-dev
+libdee-qt4-3
+libdee-qt4-dev
+libdee-qt5-3
+libdee-qt5-dev
 libfarstream-0.2-5
 libfarstream-0.2-dev
 libfarstream-0.2-doc
+libfcgi-bin
+libfcgi-dev
+libfcgi0ldbl
+libfcitx-config4
+libfcitx-core0
+libfcitx-gclient0
+libfcitx-qt0
+libfcitx-qt5-1
+libfcitx-qt5-dbg
+libfcitx-qt5-dev
+libfcitx-utils0
 libfolks-dev
 libfolks-dummy-dev
 libfolks-dummy25
@@ -55,11 +205,45 @@ libfolks-eds25
 libfolks-telepathy-dev
 libfolks-telepathy25
 libfolks25
-libgeoclue-2-0
-libgeoclue-2-dev
+libframe-dev
+libframe6
+libfuzzer-3.9-dev
+libfuzzer-4.0-dev
+libgcc-6-dev-arm64-cross
+libgcc-6-dev-armhf-cross
+libgcc-6-dev-powerpc-cross
+libgcc-6-dev-ppc64el-cross
+libgeis-dev
+libgeis-doc
+libgeis1
+libgeoclue-dev
+libgeoclue0
+libgeonames-common
+libgeonames-dev
+libgeonames0
+libgflags-dev
+libgflags-doc
+libglewmx-dev
+libglewmx1.13
+libgmime-2.6-0
+libgmime-2.6-dev
+libgmime-2.6-doc
+libgmime2.6-cil
+libgmime2.6-cil-dev
+libgolang-1.7-std1
+libgolang-dbus1
+libgoogle-glog-dev
+libgoogle-glog-doc
+libgoogle-glog0v5
+libgrail-dev
+libgrail6
+libgsettings-qt-dev
+libgsettings-qt1
 libgssdp-1.0-3
 libgssdp-1.0-dev
 libgssdp-doc
+libgtkspell3-3-0
+libgtkspell3-3-dev
 libgupnp-1.0-4
 libgupnp-1.0-dev
 libgupnp-doc
@@ -71,19 +255,54 @@ libhardware-dev
 libhardware2
 libhistoryservice-dev
 libhistoryservice0
+libhud-client2
+libhud-client2-dev
+libhud-client2-doc
+libhud-gtk1
+libhud-gtk1-dev
+libhud-gtk1-doc
+libhud2
+libhud2-dev
+libhud2-doc
 libhybris
 libhybris-common-dev
 libhybris-common1
 libhybris-dev
-libindicator-transfer-dev
-libindicator-transfer0
+libjson-perl
+libjson-xs-perl
+liblightdm-gobject-1-0
+liblightdm-gobject-1-dev
+liblightdm-gobject-1-doc
+liblightdm-qt-3-0
+liblightdm-qt-dev
+liblightdm-qt5-3-0
+liblightdm-qt5-3-dev
+liblld-4.0
+liblld-4.0-dbg
+liblld-4.0-dev
+liblldb-3.9
+liblldb-3.9-dbg
+liblldb-3.9-dev
+liblldb-4.0
+liblldb-4.0-dbg
+liblldb-4.0-dev
+libllvm4.0
+libllvm4.0-dbg
+liblttng-ust-ctl2
+liblttng-ust-dev
+liblttng-ust-python-agent0
+liblttng-ust0
 libmedia-dev
 libmedia1
 libmediascanner-2.0-4
 libmediascanner-2.0-dev
+libmetacity-dev
+libmetacity1
 libmission-control-plugins-dev
 libmission-control-plugins-doc
 libmission-control-plugins0
+libmng-dev
+libmng2
 libnet-cpp-dev
 libnet-cpp-doc
 libnet-cpp2
@@ -91,46 +310,110 @@ libnice-dbg
 libnice-dev
 libnice-doc
 libnice10
-libonline-accounts-client-dev
-libonline-accounts-client1
-libonline-accounts-daemon-dev
-libonline-accounts-daemon1
-libonline-accounts-plugin-dev
-libonline-accounts-qt-dev
-libonline-accounts-qt1
+libnss-resolve
+libnux-4.0-0
+libnux-4.0-common
+libnux-4.0-dev
 liboxideqt-qmlplugin
 liboxideqtcore-dev
 liboxideqtcore0
 liboxideqtquick-dev
 liboxideqtquick0
-libplatform-api1-dev
-libplatform-api1-doc
-libplatform-hardware-api1-dev
+libperl4-corelibs-perl
+libpoppler-qt4-4
+libpoppler-qt4-dev
+libpresage-data
+libpresage-dev
+libpresage-doc
+libpresage1-dbg
+libpresage1v5
 libprocess-cpp-dev
 libprocess-cpp-doc
 libprocess-cpp3
+libproperties-cpp-dev
+libproperties-cpp-doc
 libqdjango-db0
 libqdjango-dbg
 libqdjango-dev
 libqdjango-doc
 libqdjango-http0
+libqgsttools-p1
 libqmenumodel-dev
 libqmenumodel0
 libqofono-dev
 libqofono-qt5-0
+libqt4-dbg
+libqt4-dbus
+libqt4-declarative
+libqt4-declarative-gestures
+libqt4-declarative-particles
+libqt4-designer
+libqt4-designer-dbg
+libqt4-dev
+libqt4-dev-bin
+libqt4-help
+libqt4-network
+libqt4-opengl
+libqt4-opengl-dev
+libqt4-qt3support
+libqt4-qt3support-dbg
+libqt4-script
+libqt4-script-dbg
+libqt4-scripttools
+libqt4-sql
+libqt4-sql-mysql
+libqt4-sql-sqlite
+libqt4-svg
+libqt4-test
+libqt4-xml
+libqt4-xmlpatterns
+libqt4-xmlpatterns-dbg
+libqt5contacts5
+libqt5feedback5
 libqt5location5
 libqt5location5-plugins
+libqt5multimedia5
+libqt5multimedia5-plugins
+libqt5multimediaquick-p5
+libqt5multimediawidgets5
+libqt5organizer5
 libqt5positioning5
 libqt5positioning5-plugins
+libqt5publishsubscribe5
+libqt5qml5
+libqt5quick5
+libqt5quickparticles5
+libqt5quicktest5
+libqt5quickwidgets5
 libqt5sensors5
 libqt5sensors5-dev
-libscope-harness-dev
-libscope-harness3
+libqt5serviceframework5
+libqt5systeminfo5
+libqt5versit5
+libqt5versitorganizer5
+libqt5webkit5
+libqt5webkit5-dbg
+libqt5webkit5-dev
+libqt5xmlpatterns5
+libqt5xmlpatterns5-dev
+libqtdbus4
+libqtgui4
+libsignon-extension1
+libsignon-glib-dev
+libsignon-glib-doc
+libsignon-glib1
+libsignon-plugins-common1
+libsignon-plugins-doc
+libsignon-qt-doc
+libsignon-qt5-1
+libsignon-qt5-dev
 libsodium-dbg
 libsodium-dev
 libsodium18
-libsystemsettings-dev
-libsystemsettings1
+libstdc++-6-dev-arm64-cross
+libstdc++-6-dev-armhf-cross
+libstdc++-6-dev-powerpc-cross
+libstdc++-6-dev-ppc64el-cross
 libtelepathy-farstream-dev
 libtelepathy-farstream-doc
 libtelepathy-farstream3
@@ -147,137 +430,284 @@ libtelepathy-qt5-farstream0
 libthumbnailer-qt-dev
 libthumbnailer-qt-doc
 libthumbnailer-qt1.0
+libtinyxml-dev
+libtinyxml-doc
+libtinyxml2.6.2v5
+libtinyxml2.6.2v5-dbg
 libtrust-store-dev
 libtrust-store-doc
 libtrust-store2
-libubuntu-application-api-dev
-libubuntu-application-api-doc
-libubuntu-application-api-headers
-libubuntu-application-api3
-libubuntu-location-service-dbg
-libubuntu-location-service-dev
-libubuntu-location-service3
-libubuntu-platform-hardware-api-dev
-libubuntu-platform-hardware-api-headers
-libubuntu-platform-hardware-api3
-libudm-priv-common1
+libtypes-serialiser-perl
+libubuntu-app-launch3-dev
+libubuntu-app-launch4
+libunity-action-qt1
+libunity-action-qt1-dev
 libunity-api-dev
 libunity-api-doc
 libunity-api0
+libunity-control-center-dev
+libunity-control-center1
+libunity-core-6.0-9
+libunity-core-6.0-dev
+libunity-gtk-parser-dev-common
+libunity-gtk2-parser-dev
+libunity-gtk2-parser0
+libunity-gtk3-parser-dev
+libunity-gtk3-parser0
+libunity-misc-dev
+libunity-misc-doc
+libunity-misc4
 libunity-scopes-dev
 libunity-scopes-doc
 libunity-scopes-qt-dev
 libunity-scopes-qt-doc
 libunity-scopes-qt0.2
 libunity-scopes1.0
-libunity-webapps-dev
-libunity-webapps-doc
-libunity-webapps0
+libunity-settings-daemon-dev
+libunity-settings-daemon1
+liburl-dispatcher1
+liburl-dispatcher1-dev
 libusermetrics-doc
 libusermetricsinput1
 libusermetricsinput1-dev
 libusermetricsoutput1
 libusermetricsoutput1-dev
+libx86-1
+libx86-dbg
+libx86-dev
+libzeitgeist-1.0-1
+libzeitgeist-1.0-1-dbg
+libzeitgeist-dev
+libzeitgeist-doc
 libzmq3-dev
 libzmq5
 libzmq5-dbg
 libzmqpp-dev
 libzmqpp4
+lightdm
+lld-4.0
+lldb-3.9
+lldb-4.0
+llvm-4.0
+llvm-4.0-dev
+llvm-4.0-doc
+llvm-4.0-examples
+llvm-4.0-runtime
 mediascanner2.0
+mesa-utils
+metacity
+metacity-common
 mir-client-platform-mesa5
 mir-graphics-drivers-desktop
-mir-platform-graphics-mesa-kms12
-mir-platform-graphics-mesa-x12
-mir-platform-input-evdev6
+myspell-bg
+myspell-cs
+myspell-el-gr
+myspell-en-au
+myspell-es
+myspell-gd
+myspell-he
+myspell-hr
+myspell-nb
+myspell-nl
+myspell-nn
+myspell-pl
+myspell-pt
+myspell-pt-br
+myspell-pt-pt
+myspell-sk
+myspell-uk
+notify-osd
+notify-osd-icons
+nux-tools
+onboard
+onboard-common
+onboard-data
+overlay-scrollbar
+overlay-scrollbar-gtk2
 oxideqt-codecs
 oxideqt-doc
-policykit-unity8
+plainbox-provider-checkbox
+plainbox-provider-resource-generic
+pm-utils
+postfix-sqlite
+powernap
+powernap-common
+powernap-server
+powerwake
+powerwake-common
+powerwaked
+presage
+presage-dbg
+prosper
+ps2eps
+pyotherside-doc
+python-lldb-4.0
 python-ndg-httpsclient
+python-presage
+python-presage-dbg
 python3-apparmor-click
 python3-click-package
+qdbus
 qmenumodel-qml
 qml-module-biometryd
+qml-module-io-thp-pyotherside
 qml-module-ofono
-qml-module-pamauthentication0.1
-qml-module-qmltermwidget1.0
+qml-module-qt-labs-folderlistmodel
 qml-module-qt-labs-settings
+qml-module-qtfeedback
+qml-module-qtgraphicaleffects
 qml-module-qtlocation
+qml-module-qtmultimedia
 qml-module-qtpositioning
+qml-module-qtqml-models2
 qml-module-qtqml-statemachine
+qml-module-qtquick-controls
+qml-module-qtquick-dialogs
+qml-module-qtquick-extras
+qml-module-qtquick-layouts
+qml-module-qtquick-localstorage
+qml-module-qtquick-particles2
+qml-module-qtquick-privatewidgets
+qml-module-qtquick-window2
+qml-module-qtquick-xmllistmodel
+qml-module-qtquick2
 qml-module-qtsysteminfo
+qml-module-qttest
 qml-module-ubuntu-connectivity
-qml-module-ubuntu-layouts
 qml-module-ubuntu-onlineaccounts
-qml-module-ubuntu-onlineaccounts-client
-qml-module-ubuntu-onlineaccounts-client-doc
-qml-module-ubuntu-onlineaccounts2
-qml-module-ubuntu-onlineaccounts2-doc
-qml-module-ubuntu-settings-components
-qml-module-ubuntu-test
 qml-module-ubuntu-thumbnailer0.1
-qml-module-ubuntu-web
-qml-module-ubuntu-web-doc
-qtcontact5-galera
+qmlscene
+qt-at-spi
+qt-at-spi-doc
+qt4-bin-dbg
+qt4-demos
+qt4-demos-dbg
+qt4-designer
+qt4-dev-tools
+qt4-doc
+qt4-linguist-tools
+qt4-qmake
+qt5-qmltooling-plugins
+qtcore4-l10n
 qtdeclarative5-accounts-plugin
+qtdeclarative5-dev
+qtdeclarative5-dev-tools
+qtdeclarative5-doc
+qtdeclarative5-examples
 qtdeclarative5-gsettings1.0
-qtdeclarative5-qtmir-plugin
+qtdeclarative5-private-dev
 qtdeclarative5-qtquick2-plugin
-qtdeclarative5-ubuntu-content1
-qtdeclarative5-ubuntu-download-manager0.1
-qtdeclarative5-ubuntu-settings-components
-qtdeclarative5-ubuntu-telephony0.1
-qtdeclarative5-ubuntu-ui-extras0.2
-qtdeclarative5-ubuntu-web-plugin-doc
+qtdeclarative5-unity-action-plugin
 qtdeclarative5-unity-notifications-plugin
 qtdeclarative5-window-plugin
+qtfeedback5-dbg
+qtfeedback5-dev
+qtfeedback5-doc
+qtgraphicaleffects5-doc
 qtlocation5-dev
 qtlocation5-doc
 qtlocation5-examples
-qtmir-desktop
+qtmultimedia5-dev
+qtmultimedia5-doc
+qtmultimedia5-examples
+qtpim5-dbg
+qtpim5-dev
+qtpim5-doc
 qtpositioning5-dev
-qtpositioning5-doc
-qtpositioning5-examples
+qtquickcontrols5-doc
+qtquickcontrols5-examples
 qtsensors5-doc
 qtsensors5-examples
-qtubuntu-appmenutheme
-qtubuntu-desktop
-qtubuntu-print
-repowerd
-repowerd-data
+qtsystems5-dbg
+qtsystems5-dev
+qtsystems5-examples
+qtsystems5-private-dev
+qtwebkit5-doc
+qtxmlpatterns5-doc
+qtxmlpatterns5-examples
+rename
+resolvconf
+rhythmbox-plugin-zeitgeist
+ruby-rrd
+session-shortcuts
+sessioninstaller
+signon-keyring-extension
+signon-plugin-oauth2
+signon-plugin-oauth2-dev
+signon-plugins-dev
+signon-ui-service
+signon-ui-x11
+signond
+signond-dev
+signond-doc
+sni-qt
+suru-icon-theme
+syslinux-themes-ubuntu
+syslinux-themes-ubuntu-precise
+syslinux-themes-ubuntu-trusty
+syslinux-themes-ubuntu-vivid
+syslinux-themes-ubuntu-wily
+syslinux-themes-ubuntu-xenial
 telepathy-mission-control-5
-telepathy-mission-control-5-dbg
-telephony-service
+texlive-extra-utils
+texlive-font-utils
+texlive-fonts-extra-doc
+texlive-generic-recommended
+texlive-humanities-doc
+texlive-latex-extra-doc
+texlive-pictures
+texlive-pstricks
+texlive-pstricks-doc
+texlive-publishers-doc
+texlive-science-doc
 thumbnailer-service
-tone-generator
-tone-generator-dbg
-ubuntu-application-api3-desktop
-ubuntu-application-api3-examples
-ubuntu-application-api3-test
-ubuntu-application-api3-touch
-ubuntu-download-manager
-ubuntu-keyboard-data
-ubuntu-keyboard-dev
-ubuntu-location-service-doc
-ubuntu-location-service-examples
-ubuntu-printing-app
-ubuntu-system-settings
-ubuntu-terminal-app
+thunderbird-gnome-support-dbg
+ubuntu-app-launch
+ubuntu-defaults-builder
+ubuntu-mobile-icons
+ubuntu-touch-sounds
+ubuntu-wallpapers-zesty
+unity
+unity-accessibility-profiles
+unity-action-doc
+unity-control-center
+unity-control-center-dev
+unity-greeter
 unity-greeter-session-broadcast
-unity-plugin-scopes
-unity-scope-mediascanner2
+unity-gtk-module-common
+unity-gtk2-module
+unity-gtk3-module
+unity-lens-applications
+unity-lens-files
+unity-lens-music
+unity-lens-photos
+unity-lens-video
+unity-schemas
+unity-scope-calculator
+unity-scope-chromiumbookmarks
+unity-scope-colourlovers
+unity-scope-devhelp
+unity-scope-firefoxbookmarks
+unity-scope-home
+unity-scope-manpages
+unity-scope-openclipart
+unity-scope-texdoc
+unity-scope-tomboy
+unity-scope-video-remote
+unity-scope-virtualbox
+unity-scope-yelp
+unity-scope-zotero
+unity-scopes-master-default
+unity-scopes-runner
+unity-services
+unity-settings-daemon
+unity-settings-daemon-dev
 unity-system-compositor
-unity-webapps-qml
-unity-webapps-qml-doc
-unity-webapps-qml-examples
-unity-webapps-service
-unity8
-unity8-common
-unity8-doc
-unity8-private
 url-dispatcher
 url-dispatcher-tools
 usermetricsservice
-webapp-container
-webbrowser-app
+vbetool
+xmir
 xserver-xorg-input-synaptics
 xserver-xorg-input-synaptics-dev
+zeitgeist-datahub
