* DistUpgrade/{EOL,Devel}ReleaseAnnouncement,   DistUpgrade/window_main.ui,   data/gtkbuilder/DistUpgrade.ui,   data/DistUpgrade.cfg,   data/DistUpgrade.cfg.xenial,   pre-build.sh:   - updated for 17.10 -> 18.04

--- a/data/DistUpgrade.cfg
+++ b/data/DistUpgrade.cfg
@@ -114,8 +114,8 @@ BackupExt=distUpgrade
 LogDir=/var/log/dist-upgrade/
 
 [Sources]
-From=zesty
-To=artful
+From=artful
+To=bionic
 ValidOrigin=Ubuntu
 ValidMirrors = mirrors.cfg
 Components=main,restricted,universe,multiverse
